# reserBUGS

./: .gitignore  404.html  LICENSE  README.md  environment.yml  gitignore  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
api/: index.html
citation/: index.html
data/: README.md
data/sample/: series_4_RESERBUGS_EXAMPLES.csv
docs/: api.md  citation.md  examples.md  external-data.md  index.md  installation.md  quickstart.md
examples/: index.html
external-data/: index.html
installation/: index.html
notebooks/: Example_NDVI.ipynb  Example_biotime.ipynb  Example_daily_data_retriever.ipynb
outputs/abiotic_data/: NDVI_EXAMPLE_climate_data.pkl  NDVI_EXAMPLE_values_with_ndvi.pkl  series_4_RESERBUGS_EXAMPLES_copernicus_monthly.csv  series_4_RESERBUGS_EXAMPLES_daily.csv
outputs/predictions/: series_4_RESERBUGS_EXAMPLES_reservoir_outputs.pkl  series_4_RESERBUGS_TRAINING_TEST_DATA.pkl
quickstart/: index.html
search/: search_index.json
src/reserbugs/: __init__.py
src/reserbugs/data/: __init__.py  copernicus.py  modis.py
src/reserbugs/evaluation/: __init__.py  error_evaluation.py
src/reserbugs/reservoir_computing/: __init__.py  reservoir_computing.py
src/reserbugs/visualization/: __init__.py  visualizations.py
tests/: test_error_evaluation.py  test_reservoir_computing.py
