[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reserbugs"
version = "0.1.0"
description = "Reservoir computing-based ecological forecasting tool"
authors = [
    { name = "reserBUGS contributors" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "reservoirpy",
    "joblib",
    "threadpoolctl"
]

[tool.setuptools.packages.find]
where = ["src"]
